    functions defined within will be available for the rest of the
    editing session. Just like a startup script.
  - The 'view', 'buffer', 'editPane' and 'textArea' variables are not
    set in this script; if it is being run at startup, it will also be
    run before the first view is even initialized. Just like a startup
    script

+ Enhancements

- Improved jEditLauncher (John Gellene):
   - executes scripts and runs JDiff from Windows shell menu or from
     scripting interface.
   - launcher waits for extended timeout period for jEdit to load.
   - multiple requests to run jEdit, launch files or run scripts are
     queued by the launcher while jEdit is loading.
   - javaw.exe is default interpreter for launching, subject to change
     by configuation utility.
   - automatic reboot when installation replaces in-memory modules.
   - fixes for all reported bugs.
- Improved PHP syntax highlighting (Ben Sarsgard)
- Minor change to plugin manager error reporting
- Console_Plugin macros removed, Console 3.0 incorporates all relevant
  features
- Transient status messages (replace all results, for example) are now
  shown for 10 seconds, instead of 2
- Updated 'Writing Plugins' section of user's guide (John Gellene)
- isPopupTrigger() is now used, instead of explicitly checking for
  Button 3 being pressed. This change was because on the Mac,
  Control-clicking is used to simulate a right mouse button click.
- History text fields previously used a Control click to display a menu
  of completions; this has been changed to a Shift click
- To be consistent with the above change, the search up and search down
  shortcuts in history text fields have been changed from C+Up and
  C+Down to S+Up and S+Down
- You can now press Enter in the 'Directory' and 'Filter' fields of the
  search and replace dialog box to begin a search
- Clicking on the mode and encoding display in the status bar opens the
  Buffer Options dialog box, clicking the overwrite and multiple